--- a/index.htm
+++ b/index.htm
@@ -1,27 +1,46 @@
-<!DOCTYPE html> 
-<html lang="en"> 
-<head> 
-<meta charset=UTF-8>
 <!--  Copyright February 28th, 2011. Ryan Bridglal, Ryanjb.com, Ryanjb.com G & E,
  RyanJB.com Games and Entertainment. This source code began development during the
   initiation of HTML 5 in January, 2011 and was completed in February, 2011.  --> 
-<title>! RyanJB.COM ! Games and Entertainment</title>
-<meta name="description" content="! RyanJB.COM ! Games and Entertainment, I.T.Consultants, I.T.Life Blog, Intellectus Protfolio, gameR"/> 
-<meta name="keywords" content="! RyanJB.COM ! Games and Entertainment, I.T.Consultants, I.T.Life Blog, Intellectus Protfolio, gameR"/>  
-<link rel="icon" href="http://www.ryanjb.com/html5/images/favicon.png" type="image/png"/> 
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
-<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0;">
-<script type="text/javascript" src="http://www.ryanjb.com/html5/portal/external.js"></script>
-<link href='http://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet' type='text/css'>
-<link type="text/css" rel="stylesheet" href="http://www.ryanjb.com/html5/portal/ScreenStyles_Portal.css" />
-<script type="text/javascript" src="http://www.ryanjb.com/html5/portal/jquery-1.3.2.min.js"></script>
-<script type="text/javascript" src="http://www.ryanjb.com/html5/portal/loadME.js"></script>
-<script type="text/javascript" src="http://www.ryanjb.com/html5/portal/fuck-right-click.js"></script>
-<link rel="alternate" type="application/rss+xml" href="http://www.ryanjb.com/html5/portal/rss.xml" hreflang="en"/>
-<!--[if lt IE 9]><script src=http://html5shiv.googlecode.com/svn/trunk/html5.js></script><![endif]-->
-<link type="text/css" rel="stylesheet" href="http://www.ryanjb.com/html5/portal/tip.css" media="screen" />
-<script type="text/javascript" src="http://www.ryanjb.com/html5/portal/tip.js"></script>
-<script type="text/javascript" src="http://www.ryanjb.com/html5/portal/cycle.js" ></script> 
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Ryanjb.com, just a portal for sites and to display others, itdevz.com">
+    <meta name="author" content="itdevz.com">
+    <link rel="icon" href="http://www.ryanjb.com/html5/images/favicon.png" type="image/png"/> 
+
+
+    <title>! RyanJB.COM ! Games and Entertainment</title>
+
+    <!-- Core JS -->
+    <script type="text/javascript" src="http://www.ryanjb.com/html5/portal/external.js"></script>
+    <script type="text/javascript" src="http://www.ryanjb.com/html5/portal/jquery-1.3.2.min.js"></script>
+    <script type="text/javascript" src="http://www.ryanjb.com/html5/portal/loadME.js"></script>
+    <script type="text/javascript" src="http://www.ryanjb.com/html5/portal/fuck-right-click.js"></script>
+    <script type="text/javascript" src="http://www.ryanjb.com/html5/portal/tip.js"></script>
+    <script type="text/javascript" src="http://www.ryanjb.com/html5/portal/cycle.js" ></script> 
+
+
+    <!-- Core CSS -->
+    <link href='http://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet' type='text/css'>
+    <link type="text/css" rel="stylesheet" href="http://www.ryanjb.com/html5/portal/ScreenStyles_Portal.css" />
+    <link type="text/css" rel="stylesheet" href="http://www.ryanjb.com/html5/portal/tip.css" media="screen" />
+
+
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    	<!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    	<![endif]-->
+
+
+
 <script type="text/javascript"> 
 $(document).ready(function(){
 	$('#helloCube').cycle({
