--- a/index.htm
+++ b/index.htm
@@ -18,18 +18,18 @@
     <title>! RyanJB.COM ! Games and Entertainment</title>
 
     <!-- Core JS -->
-    <script type="text/javascript" src="http://www.ryanjb.com/html5/portal/external.js"></script>
-    <script type="text/javascript" src="http://www.ryanjb.com/html5/portal/jquery-1.3.2.min.js"></script>
-    <script type="text/javascript" src="http://www.ryanjb.com/html5/portal/loadME.js"></script>
-    <script type="text/javascript" src="http://www.ryanjb.com/html5/portal/fuck-right-click.js"></script>
-    <script type="text/javascript" src="http://www.ryanjb.com/html5/portal/tip.js"></script>
-    <script type="text/javascript" src="http://www.ryanjb.com/html5/portal/cycle.js" ></script> 
+    <script type="text/javascript" src="js/external.js"></script>
+    <script type="text/javascript" src="js/jquery-1.3.2.min.js"></script>
+    <script type="text/javascript" src="js/loadME.js"></script>
+    <script type="text/javascript" src="js/right-click.js"></script>
+    <script type="text/javascript" src="js/tip.js"></script>
+    <script type="text/javascript" src="js/cycle.js" ></script> 
 
 
     <!-- Core CSS -->
     <link href='http://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet' type='text/css'>
-    <link type="text/css" rel="stylesheet" href="http://www.ryanjb.com/html5/portal/ScreenStyles_Portal.css" />
-    <link type="text/css" rel="stylesheet" href="http://www.ryanjb.com/html5/portal/tip.css" media="screen" />
+    <link type="text/css" rel="stylesheet" href="css/ScreenStyles_Portal.css" />
+    <link type="text/css" rel="stylesheet" href="css/tip.css" media="screen" />
 
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -93,9 +93,7 @@ $(document).ready(function(){
 </script> 
 </head>
 <body>
-<!--  Copyright February 28th, 2011. Ryan Bridglal, Ryanjb.com, Ryanjb.com G & E,
- RyanJB.com Games and Entertainment. This source code began development during the
-  initiation of HTML 5 in January, 2011 and was completed in February, 2011.  --> 
+
            <div id="blockFrame">
            <div class="blockScreen" id="ScreenMyself"></div>
            <div class="blockScreen" id="ScreenPortfolio"></div>
@@ -105,11 +103,11 @@ $(document).ready(function(){
            <div class="blockScreen" id="ScreenStore"></div>
 
            <div id="helloCube">
-                            <a href="http://www.ryanjb.com" class="Myself" id="Myself"><img src="http://www.ryanjb.com/html5/images/img_geo.jpg" alt="" /></a><a href="http://www.ryanjb.com" class="Myself"><img src="http://www.ryanjb.com/html5/images/img_wel.jpg" alt="" /></a> 
+                            <a href="http://www.ryanjb.com" class="Myself" id="Myself"><img src="images/img_geo.jpg" alt="" /></a><a href="http://www.ryanjb.com" class="Myself"><img src="images/img_wel.jpg" alt="" /></a> 
                             </div>
 
            <div id="workCube">
-                           <a href="http://projek.ryanjb.com" rel="external" class="Blog tip" id="Blog" title="Projek Portfolio A Development & Design"><img src="http://www.ryanjb.com/html5/images/img_work01.jpg" alt="" /></a><a href="http://projek.ryanjb.com" rel="external" class="Blog tip" title="Projek Portfolio A Development & Design"><img src="http://www.ryanjb.com/html5/images/img_blog.jpg" alt="" /></a>
+                           <a href="http://projek.ryanjb.com" rel="external" class="Blog tip" id="Blog" title="Projek Portfolio A Development & Design"><img src="images/img_work01.jpg" alt="" /></a><a href="http://projek.ryanjb.com" rel="external" class="Blog tip" title="Projek Portfolio A Development & Design"><img src="images/img_blog.jpg" alt="" /></a>
                            </div>
 
            <div id="playCube">
