--- a/index.htm
+++ b/index.htm
@@ -111,15 +111,15 @@ $(document).ready(function(){
                            </div>
 
            <div id="playCube">
-                           <a href="http://intellectus.ryanjb.com" rel="external" class="Portfolio tip" id="Portfolio" title="Intellectualize Your Mind"><img src="http://www.ryanjb.com/html5/images/img_play02.jpg" alt="" /></a><a href="http://intellectus.ryanjb.com" rel="external" class="Portfolio tip" title="Intellectualize Your Mind"><img src="http://www.ryanjb.com/html5/images/img_work.jpg" alt="" /></a>
+                           <a href="http://intellectus.ryanjb.com" rel="external" class="Portfolio tip" id="Portfolio" title="Intellectualize Your Mind"><img src="images/img_play02.jpg" alt="" /></a><a href="http://intellectus.ryanjb.com" rel="external" class="Portfolio tip" title="Intellectualize Your Mind"><img src="images/img_work.jpg" alt="" /></a>
                            </div>
 
            <div id="newsCube">
-                           <a href="http://it.ryanjb.com" rel="external" class="Ultimate tip" id="Ultimate" title="Your Technology Solution"><img src="http://www.ryanjb.com/html5/images/img_news03.jpg" alt="" /></a><a href="http://it.ryanjb.com" rel="external" class="Ultimate tip" title="Your Technology Solution"><img src="http://www.ryanjb.com/html5/images/img_play.jpg" alt="" /></a>
+                           <a href="http://it.ryanjb.com" rel="external" class="Ultimate tip" id="Ultimate" title="Your Technology Solution"><img src="images/img_news03.jpg" alt="" /></a><a href="http://it.ryanjb.com" rel="external" class="Ultimate tip" title="Your Technology Solution"><img src="images/img_play.jpg" alt="" /></a>
                            </div>
 
            <div id="blogCube">
-                           <a href="http://www.ryanjb.com" rel="external" class="News tip" id="News" title="gameR Coming Soon"><img src="http://www.ryanjb.com/html5/images/img_blog04.jpg" alt="" /></a><a href="http://www.ryanjb.com" rel="external" class="News tip" title="gameR Coming Soon"><img src="http://www.ryanjb.com/html5/images/img_news.jpg" alt="" /></a>
+                           <a href="http://www.ryanjb.com" rel="external" class="News tip" id="News" title="gameR Coming Soon"><img src="images/img_blog04.jpg" alt="" /></a><a href="http://www.ryanjb.com" rel="external" class="News tip" title="gameR Coming Soon"><img src="images/img_news.jpg" alt="" /></a>
                            </div>
 
            <div id="facebookCube"><div><!-- AddThis Button BEGIN -->
@@ -153,7 +153,7 @@ $(document).ready(function(){
             type="submit" value="Search" />
                 <br /><br /><br /><br /><br />
                 <div class="cse-branding-right" style="color:#FFFFFF">
-                <a href="http://www.ryanjb.com/tos.html" target="_parent">Terms of Service-Policies</a> | Copyright &copy; 2005 - 2013 Ryan J. Bridglal,<br />
+                <a href="http://www.ryanjb.com/tos.html" target="_parent">Terms of Service-Policies</a> | Copyright &copy; 2005 - current Ryan J. Bridglal,<br />
             All rights reserved.<br />
                             Owned and operated by<br /> RyanJB.com G and E.
             </div>
@@ -180,17 +180,8 @@ $(".Myself, .Portfolio, .Ultimate, .News, .Blog, .Store").mouseover(function(){
 });
 $(".blockScreen").mouseover(function(){$(".blockScreen").fadeOut(400);});
 </script>
-<script type="text/javascript"> 
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script> 
-<script type="text/javascript">
-    var pageTracker = _gat._getTracker("UA-27439461-1");
-pageTracker._initData();
-pageTracker._trackPageview();
+
 </script> 
 </body>
-<!--  Copyright February 28th, 2011. Ryan Bridglal, Ryanjb.com, Ryanjb.com G & E,
- RyanJB.com Games and Entertainment. This source code began development during the
-  initiation of HTML 5 in January, 2011 and was completed in February, 2011.  --> 
+
 </html>
