--- a/index.htm
+++ b/index.htm
@@ -11,8 +11,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Ryanjb.com, just a portal for sites and to display others, itdevz.com">
-    <meta name="author" content="itdevz.com">
-    <link rel="icon" href="http://www.ryanjb.com/html5/images/favicon.png" type="image/png"/> 
+    <meta name="author" content="itdevz.com, hostingzeus.com, ryanjb.com">
+    <link rel="icon" href="images/favicon.png" type="image/png"/> 
 
 
     <title>! RyanJB.COM ! Games and Entertainment</title>
