--- a/index1.htm
+++ b/index1.htm
@@ -11,8 +11,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Ryanjb.com, just a portal for sites and to display others, itdevz.com">
-    <meta name="author" content="itdevz.com, hostingzeus.com, ryanjb.com">
-    <link rel="icon" href="images/favicon.png" type="image/png"/> 
+    <meta name="author" content="itdevz.com">
+    <link rel="icon" href="http://www.ryanjb.com/html5/images/favicon.png" type="image/png"/> 
 
 
     <title>! RyanJB.COM ! Games and Entertainment</title>
@@ -166,9 +166,8 @@ $(document).ready(function(){
                 
         <!-- footer code -->        
 	<div class="cse-branding-right" style="color:#FFFFFF">
-        <a href="http://www.ryanjb.com/tos.html" target="_parent">Terms of Service-Policies</a> | Copyright &copy; 2005 - current Ryan J. Bridglal,<br />
-         All rights reserved.<br />
-         Owned and operated by<br /> RyanJB.com G and E.
+        <a href="http://www.ryanjb.com" target="_parent">Terms of Service-Policies</a> |Copyright 2011 Ryan J. Bridglal<br />
+         I.T. Devz, We Are CODE NINJAS! (Formally I.T.Consultants, RyanJB.com G&E) 
         </div>
         <!-- footer code -->   
         
